--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
         "@mui/icons-material": "^5.11.11",
         "@mui/lab": "^5.0.0-alpha.100",
         "@mui/material": "^5.10.6",
+        "@mui/x-data-grid": "^6.0.2",
         "@mui/x-date-pickers": "^6.0.1",
         "@reduxjs/toolkit": "^1.8.5",
         "@testing-library/jest-dom": "^5.16.5",
@@ -24,6 +25,7 @@
         "history": "^5.3.0",
         "lodash": "^4.17.21",
         "prop-types": "^15.8.1",
+        "rc-pagination": "^3.3.0",
         "react": "^18.2.0",
         "react-apexcharts": "^1.4.0",
         "react-copy-to-clipboard": "^5.1.0",
@@ -32,6 +34,7 @@
         "react-draggable": "^4.4.5",
         "react-element-to-jsx-string": "^15.0.0",
         "react-number-format": "^4.9.4",
+        "react-paginate": "^8.1.4",
         "react-perfect-scrollbar": "^1.5.8",
         "react-redux": "^8.0.4",
         "react-router": "^6.4.1",
