--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
         "@testing-library/react": "^13.4.0",
         "@testing-library/user-event": "^14.4.3",
         "apexcharts": "^3.35.5",
+        "axios": "^1.3.4",
         "dayjs": "^1.11.7",
         "formik": "^2.2.9",
         "framer-motion": "^7.3.6",
