--- a/package.json
+++ b/package.json
@@ -25,10 +25,12 @@
         "framer-motion": "^7.3.6",
         "history": "^5.3.0",
         "lodash": "^4.17.21",
+        "moment": "^2.29.4",
         "prop-types": "^15.8.1",
         "rc-pagination": "^3.3.0",
         "react": "^18.2.0",
         "react-apexcharts": "^1.4.0",
+        "react-big-calendar": "^1.6.8",
         "react-copy-to-clipboard": "^5.1.0",
         "react-device-detect": "^2.2.2",
         "react-dom": "^18.2.0",
