--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
         "react-copy-to-clipboard": "^5.1.0",
         "react-device-detect": "^2.2.2",
         "react-dom": "^18.2.0",
+        "react-drag-and-drop": "^3.0.0",
         "react-draggable": "^4.4.5",
         "react-element-to-jsx-string": "^15.0.0",
         "react-number-format": "^4.9.4",
